--- a/ucs-school-umc-import/debian/changelog
+++ b/ucs-school-umc-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-umc-import (0.0.1-19) unstable; urgency=low
+
+  * Bug #46832: fix package dependency
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 21 Jun 2018 09:18:27 +0200
+
 ucs-school-umc-import (0.0.1-18) unstable; urgency=low
 
   * Bug #46832: add support for Role resource
