--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-66) unstable; urgency=medium
+
+  * Bug #40727: Fix bug in essential/internetrule.py
+
+ -- Jürn Brodersen <brodersen@univention.de>  Thu, 21 Jun 2018 13:05:21 +0200
+
 ucs-test-ucsschool (5.0.2-65) unstable; urgency=medium
 
   * Bug #47208: fix 70_users_module
