--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (16.0.2-14) unstable; urgency=low
+
+  * Bug #46829: move join script code for unprivileged user to
+    ucs-school-import package
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 22 Jun 2018 14:38:05 +0200
+
 ucs-school-import (16.0.2-13) unstable; urgency=low
 
   * Bug #45164: fix typo
