--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (15.0.3-56) unstable; urgency=low
+
+  * Bug #46829: move join script code for unprivileged user to
+    ucs-school-import package
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 22 Jun 2018 14:49:25 +0200
+
 ucs-school-import (15.0.3-55) unstable; urgency=low
 
   * Bug #46829: fix typo
