--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-15) unstable; urgency=low
+
+  * Bug #46829: rename LDAP secret file to prevent confusion
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 26 Jun 2018 10:17:46 +0200
+
 ucs-school-import (16.0.2-14) unstable; urgency=low
 
   * Bug #46829: move join script code for unprivileged user to
