--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.3-57) unstable; urgency=low
+
+  * Bug #46829: rename LDAP secret file to prevent confusion
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 26 Jun 2018 10:19:11 +0200
+
 ucs-school-import (15.0.3-56) unstable; urgency=low
 
   * Bug #46829: move join script code for unprivileged user to
