--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,16 @@
+ucs-school-metapackage (11.0.1-5) unstable; urgency=medium
+
+  * Bug #47226: revert
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 26 Jun 2018 13:05:38 +0200
+
+ucs-school-metapackage (11.0.1-4) unstable; urgency=medium
+
+  * Bug #47226: Move ucsschool specific join scripts into
+    ucs-schol-metapackage
+
+ -- Jürn Brodersen <brodersen@univention.de>  Thu, 21 Jun 2018 14:26:00 +0200
+
 ucs-school-metapackage (11.0.1-3) unstable; urgency=medium
 
   * Bug #47017: Add package ucs-school-umc-lists to recommends
