--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.3-58) unstable; urgency=low
+
+  * Bug #46832: fix hook belonging to wrong package
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 27 Jun 2018 11:02:52 +0200
+
 ucs-school-import (15.0.3-57) unstable; urgency=low
 
   * Bug #46829: rename LDAP secret file to prevent confusion
