--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-18) unstable; urgency=low
+
+  * Bug #42416: prevent running forbidden configuration combination
+
+ -- Daniel Troeder <troeder@univention.de>  Thu, 28 Jun 2018 10:20:42 +0200
+
 ucs-school-import (16.0.2-17) unstable; urgency=low
 
   * Bug #47236: restart Gunicorn when machine account password changes
