--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.1-14) unstable; urgency=low
+
+  * Bug #45379: add support for role attribute
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 03 Jul 2018 10:47:32 +0200
+
 ucs-school-lib (11.0.1-13) unstable; urgency=low
 
   * Bug #45447: Revert - remove + from SambaForceGroup option in shares
