--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.1-16) unstable; urgency=low
+
+  * Bug #45379: add share classes to module import
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 04 Jul 2018 12:10:06 +0200
+
 ucs-school-lib (11.0.1-15) unstable; urgency=medium
 
   * Bug #45379: Make ucsschool role attribute internal if not activated
