--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-69) unstable; urgency=low
+
+  * Bug #44310: skip wait_for_drs_replication_of_membership if no S4 is installed
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 04 Jul 2018 17:36:56 +0200
+
 ucs-test-ucsschool (5.0.2-68) unstable; urgency=low
 
   * Bug #45379: add tests for role attribute
