--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-23) unstable; urgency=low
+
+  * Bug #46712: display summary after dry-run in UMC import module
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 06 Jul 2018 11:17:37 +0200
+
 ucs-school-import (16.0.2-22) unstable; urgency=low
 
   * Bug #45379: bump join script version
