Bug #47332: restart s4-connector to activate new config
The s4-connector is never restarted during setup if installed prior to ucs@school.
A lot of ucr variables that are set during the @school setup take only effect after an univention-s4-connector restart. For example connector/s4/mapping/group/syncmode=write.

--- a/ucs-school-metapackage/debian/changelog
+++ b/ucs-school-metapackage/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-metapackage (11.0.1-6) unstable; urgency=medium
+
+  * Bug #47332: restart s4-connector to activate new config
+
+ -- Jürn Brodersen <brodersen@univention.de>  Wed, 11 Jul 2018 16:17:44 +0200
+
 ucs-school-metapackage (11.0.1-5) unstable; urgency=medium
 
   * Bug #47226: revert
