--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-71) unstable; urgency=medium
+
+  * Bug #47345: skip wait_for_drs_replication if object will not be replicated
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 17 Jul 2018 10:03:39 +0200
+
 ucs-test-ucsschool (5.0.2-70) unstable; urgency=medium
 
   * Bug #44310: 207_import-users_school_change fix search base
