--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-72) unstable; urgency=low
+
+  * Bug #47162: add test for not is_countable exception
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 27 Jul 2018 16:22:57 +0200
+
 ucs-test-ucsschool (5.0.2-71) unstable; urgency=medium
 
   * Bug #47345: skip wait_for_drs_replication if object will not be replicated
