--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-73) unstable; urgency=low
+
+  * Bug #47221: add test for PostReadPyHook
+
+ -- Daniel Troeder <troeder@univention.de>  Sun, 29 Jul 2018 09:54:11 +0200
+
 ucs-test-ucsschool (5.0.2-72) unstable; urgency=low
 
   * Bug #47162: add test for not is_countable exception
