--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.1-17) unstable; urgency=low
+
+  * Bug #45715: support filtering in PyHooksLoader
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 30 Jul 2018 17:18:37 +0200
+
 ucs-school-lib (11.0.1-16) unstable; urgency=low
 
   * Bug #45379: add share classes to module import
