--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-74) unstable; urgency=low
+
+  * Bug #45715: add test for dry run support in pyhooks
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 30 Jul 2018 17:19:37 +0200
+
 ucs-test-ucsschool (5.0.2-73) unstable; urgency=low
 
   * Bug #47221: add test for PostReadPyHook
