--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (10.0.2-17) unstable; urgency=low
+
+  * Bug #46837: support filtering in PyHooksLoader
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 31 Jul 2018 08:25:49 +0200
+
 ucs-school-lib (10.0.2-16) unstable; urgency=low
 
   * Bug #46829: support setting permissions for logfiles
