Bug #47450: don't move user when importing into additional school with alphanumerical lower name

--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (16.0.2-32) unstable; urgency=low
+
+  * Bug #47450: don't move user when importing into additional school with
+    alphanumerical lower name
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 03 Aug 2018 12:25:33 +0200
+
 ucs-school-import (16.0.2-31) unstable; urgency=low
 
   * Bug #47448: add documentation, improve exception messages, fix minor bugs
