--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-34) unstable; urgency=low
+
+  * Bug #47451: don't fill ucsschool_role attribute if feature is deactivated
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 06 Aug 2018 10:26:17 +0200
+
 ucs-school-import (16.0.2-33) unstable; urgency=low
 
   * Bug #47450: deduplicate schools attribute
