--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (15.0.3-65) unstable; urgency=low
+
+  * Bug #47472: set file permissions on initial installation
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 08 Aug 2018 14:19:13 +0200
+
 ucs-school-import (15.0.3-64) unstable; urgency=low
 
   * Bug #46837: check common UDM/ucsschool.lib.models exceptions in dry run
