--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-80) unstable; urgency=low
+
+  * Bug #47451: adapt tests to changed expected_attributes()
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 13 Aug 2018 16:30:25 +0200
+
 ucs-test-ucsschool (5.0.2-79) unstable; urgency=low
 
   * Bug #47451: test if ucsschool_role attribute is unset when feature is
