--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-100) unstable; urgency=low
+
+  * Bug #47451: backport test improvements
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 15 Aug 2018 08:34:44 +0200
+
 ucs-test-ucsschool (4.0.4-99) unstable; urgency=low
 
   * Bug #46837: add test for dry run support in pyhooks
