--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-101) unstable; urgency=low
+
+  * Bug #47451: DRSReplicationFailed exists only in 4.3
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 17 Aug 2018 14:35:16 +0200
+
 ucs-test-ucsschool (4.0.4-100) unstable; urgency=low
 
   * Bug #47451: backport test improvements
