--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-36) unstable; urgency=low
+
+  * Bug #47333: handle django-celerys upgrade
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 20 Aug 2018 13:04:38 +0200
+
 ucs-school-import (16.0.2-35) unstable; urgency=low
 
   * Bug #47514: set file permissions on initial installation
