--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-84) unstable; urgency=low
+
+  * Bug #47302: add test for ResultPyHook
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 20 Aug 2018 16:48:30 +0200
+
 ucs-test-ucsschool (5.0.2-83) unstable; urgency=low
 
   * Bug #47451: fix test
