--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-39) unstable; urgency=low
+
+  * Bug #47683: create different user on each DC backup
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 28 Aug 2018 11:54:38 +0200
+
 ucs-school-import (16.0.2-38) unstable; urgency=low
 
   * Bug #47302: add example result hook
