--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-40) unstable; urgency=low
+
+  * Bug #47221: add new PostReadPyHook method all_entries_read()
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 29 Aug 2018 18:10:49 +0200
+
 ucs-school-import (16.0.2-39) unstable; urgency=low
 
   * Bug #47683: create different user on each DC backup
