--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-86) unstable; urgency=low
+
+  * Bug #47221: update test due to API extensions in PostReadPyHook
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 29 Aug 2018 18:11:24 +0200
+
 ucs-test-ucsschool (5.0.2-85) unstable; urgency=medium
 
   * Bug #47386: fix 10_assign_internet_rules_check and move check.py into
