--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test-ucsschool (4.0.4-104) unstable; urgency=low
+
+  * Bug #45715: handle ImportError while ucs-test from 4.3-1errata is not in
+    4.3-2
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 31 Aug 2018 16:59:36 +0200
+
 ucs-test-ucsschool (4.0.4-103) unstable; urgency=low
 
   * Bug #46837: add test for "username not in use"
