--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-89) unstable; urgency=low
+
+  * Bug #47221: update test due to API extensions in PostReadPyHook
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 03 Sep 2018 11:24:19 +0200
+
 ucs-test-ucsschool (5.0.2-88) unstable; urgency=low
 
   * Bug #45715: handle ImportError while ucs-test from 4.3-1errata is not in
