--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-90) unstable; urgency=low
+
+  * Bug #47221: fix test
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 03 Sep 2018 13:11:17 +0200
+
 ucs-test-ucsschool (5.0.2-89) unstable; urgency=low
 
   * Bug #47221: update test due to API extensions in PostReadPyHook
