--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-92) unstable; urgency=medium
+
+  * Bug #44314: fix import in test  242_import-users_test_password_hashes
+
+ -- Jürn Brodersen <brodersen@univention.de>  Tue, 04 Sep 2018 19:01:20 +0200
+
 ucs-test-ucsschool (5.0.2-91) unstable; urgency=low
 
   * Bug #47450: add additional password hash check
