--- a/ucs-school-lib/debian/changelog
+++ b/ucs-school-lib/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-lib (11.0.1-22) unstable; urgency=low
+
+  * Bug #47447: set 'schools' property when creating User from UDM object
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 07 Sep 2018 15:40:40 +0200
+
 ucs-school-lib (11.0.1-21) unstable; urgency=low
 
   * Bug #44314: don't modify object being logged
