--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-105) unstable; urgency=medium
+
+  * Bug #47451: fix expected attributes for legacy import
+
+ -- Jürn Brodersen <brodersen@univention.de>  Mon, 10 Sep 2018 21:58:18 +0200
+
 ucs-test-ucsschool (4.0.4-104) unstable; urgency=low
 
   * Bug #45715: handle ImportError while ucs-test from 4.3-1errata is not in
