--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (4.0.4-106) unstable; urgency=medium
+
+  * Bug #47451: fix 34_import-users_legacy_migration
+
+ -- Jürn Brodersen <brodersen@univention.de>  Mon, 10 Sep 2018 23:19:42 +0200
+
 ucs-test-ucsschool (4.0.4-105) unstable; urgency=medium
 
   * Bug #47451: fix expected attributes for legacy import
