--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (16.0.2-50) unstable; urgency=low
+
+  * Bug #45673: write statistics, passwords and summary even when import
+    aborts
+
+ -- Daniel Troeder <troeder@univention.de>  Tue, 25 Sep 2018 15:45:13 +0200
+
 ucs-school-import (16.0.2-49) unstable; urgency=low
 
   * Bug #47681: provide better error message for missing mandatory columns
