--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,9 @@
+ucs-school-import (16.0.2-51) unstable; urgency=low
+
+  * Bug #47677: handle CsvReader initialization without filename
+
+ -- Daniel Troeder <troeder@univention.de>  Wed, 26 Sep 2018 10:13:48 +0200
+
 ucs-school-import (16.0.2-50) unstable; urgency=low
 
   * Bug #45673: write statistics, passwords and summary even when import
