--- a/ucs-test-ucsschool/debian/changelog
+++ b/ucs-test-ucsschool/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-ucsschool (5.0.2-95) unstable; urgency=low
+
+  * Bug #47681: missing columns are an error now
+
+ -- Daniel Troeder <troeder@univention.de>  Fri, 28 Sep 2018 13:58:37 +0200
+
 ucs-test-ucsschool (5.0.2-94) unstable; urgency=medium
 
   * Bug #47751: check that user_import config is empty
