--- a/ucs-school-import/debian/changelog
+++ b/ucs-school-import/debian/changelog
@@ -1,3 +1,10 @@
+ucs-school-import (16.0.2-53) unstable; urgency=low
+
+  * Bug #47691: check properties in config['mandatory_attributes'] exist and
+    are non-empty
+
+ -- Daniel Troeder <troeder@univention.de>  Mon, 01 Oct 2018 09:50:14 +0200
+
 ucs-school-import (16.0.2-52) unstable; urgency=low
 
   * Bug #47681: continue supporting optional, undocumented 'password' column
